Fixed Bootstrap modal z-index and html place of the code

--- a/pskb_website/static/css/base.css
+++ b/pskb_website/static/css/base.css
@@ -20,7 +20,7 @@ body {
 }
 
 .navbar-brand {
-    z-index: 1030; /* modal 1050, fullscreen 1040 */
+    z-index: 1020; /* modal 1050/1040, fullscreen 1030 */
     position: relative;
 }
 
@@ -37,7 +37,7 @@ body {
 }
 
 .hack-links-plus-icon {
-    z-index: 1030;
+    z-index: 1020;
     padding: 0;
     margin-top: 8px;
     cursor: pointer;
@@ -65,7 +65,7 @@ body {
 }
 
 .hack-links .external-hack-links {
-    z-index: 1020;
+    z-index: 1010;
     position: absolute;
     width: 240px;
     height: 110px;
